third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/array/only-comma-1.stderr
TOML parse error at line 1, column 17
  |
1 | only-comma-1 = [,]
  |                 ^
invalid array
expected `]`
